Actualizacio de la pagina de bienvenida

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     </head>
     <body>
         <h1>HUMAR MORENO BRAVO</h1>
+        <p>Ingeniero mecatronico de la universidad autonoma del caribe</p>
     </body>
 </html>
